--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empresa mia</title>
+    <title>Classic Records</title>
 </head>
-<body background="img/Cloudy-sky-thick-clouds_3840x2160.jpg" style="background-repeat: no-repeat; background-size: cover;">
-    <h1 style=font-size: aria-multiselectable="true";">Información</h1>
-    <img src="img/taller-programación-personas-trans-scaled.jpg" alt="Imagen relacionada con la programación"width="1200"
-    height="801" title="taking a break">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/NgZAIvufqoM?autoplay=1&mute=1z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<body background="img/1485781275_391622_1485781407_sumario_normal.jpg" style="background-repeat: no-repeat; background-size: cover;">
+    <h1 style="color: aliceblue;"">Discos 80eros</h1>
+    <img src="img/C L A S S I C R E C O R D S (@classic_records88) • Fotos y videos de Instagram.html">
+    <iframe width="560" height="315"video src="img/VID_20210526_191855.mp4" controls></video>></video>
 </body>
 </html>
