creacion de otras páginas

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nosotros</title>
 </head>
 <body>
-    
+    <div>
+        <ul> <li>Link<link rel="stylesheet" href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\index.html"></ul></li>
+    </div>
 </body>
 </html>
