--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Records</title>
 </head>
-<body background="img/1485781275_391622_1485781407_sumario_normal.jpg" style="background-repeat: no-repeat; background-size: cover;">
-    <h1 style="color: aliceblue;"">Discos 80eros</h1>
-    <img src="img/C L A S S I C R E C O R D S (@classic_records88) • Fotos y videos de Instagram.html">
-    <iframe width="560" height="315"video src="img/VID_20210526_191855.mp4" controls></video>></video>
+<body background="img/WhatsApp Image 2021-08-30 at 8.19.23 AM.jpeg" style="background-repeat: no-repeat; background-size: cover;">
+   <header>
+    <h1 style="color:black;">Discos 80eros</h1>
+</header>
+<nav>
+    <ul>
+    <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\nosotros.html">Nosotros</a></li>
+    <li>Productos</li>
+    <li>Historia</li>
+    <li>Contactanos</li>
+    
+    </ul>
+    
+    </nav>
+    <img class="right"src="img/whitesnake-greatest-hits-tour_26879822374_o.jpg" alt="Logo de la marca" width="250"
+    height="200">    
+    <video src="img/WhatsApp Video 2021-08-30 at 8.20.57 AM.mp4" style="display:block; margin: 0 auto;" controls width="500"
+    height="250"></video>
 </body>
 </html>
