--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
     <ul>
     <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\nosotros.html">Nosotros</a></li>
-    <li>Productos</li>
+    <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\Productos.html">Productos</a></li>
     <li>Historia</li>
     <li>Contactanos</li>
     
