--- a/nosotros.html
+++ b/nosotros.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
 </head>
-<body>
-    <div>
-        <ul> <li>Link<link rel="stylesheet" href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\index.html"></ul></li>
-    </div>
+<body background="img/WhatsApp Image 2021-08-30 at 8.19.23 AM.jpeg" style="background-repeat: no-repeat; background-size: cover;">
+    <h1 style=color:black> Mision</h1>
+    <p style="color: gray;">Rememorar la cultura del hard rock de los 80s por medios de la música en formato físico, que permita con los discos de vinilo una consolidación de este formato nuevamente en el mercado.</p>
 </body>
+<h1>Vision</h1>
+<p style="color: gray; font-style: unset;">consolidar a Classic Records como la tienda de discos mas importante de la ciudad y de esta forma generar un espacio físico donde los clientes puedan disfrutar de los discos y pasar un buen rato.</p>
 </html>
