--- a/Historia.html
+++ b/Historia.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Historia</title>
 </head>
 <body background="img/WhatsApp Image 2021-08-30 at 8.19.23 AM.jpeg" style="background-repeat: no-repeat; background-size: cover;">
-    <h1>Nuestros productos</h1>
-    <div>
-        <ul>
-            <li>AOR</li>
-            <li>Heavy Metal</li>
-            <li>Rock</li>
-            <li>Disco</li>
-            <li>Pop ochentero</li>
-            <li>entre otros</li>
-            
-        </ul>
-
-
-    </div>
+    <h1>Nuestra Historia</h1>
+    <p>Durante la pandemia y debido a las necesidades que conllevó esta, nos reunimos un grupo de amigos con la idea de importar para luego vender al circulo cercano de amigos. Esto se convirtió aún más grande al crear nuestra página de instagram e ir creciendo de a poco.</p>
 </body>
 </html>
