--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <ul>
     <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\nosotros.html">Nosotros</a></li>
     <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\Productos.html">Productos</a></li>
-    <li>Historia</li>
-    <li>Contactanos</li>
+    <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\Historia.html">Historia</a></li>
+    <li> <a href="C:\Users\USUARIO\Documents\GitHub\EmpresaA\Contactanos.html">Contactanos</a></li>
     
     </ul>
     
