--- a/Contactanos.html
+++ b/Contactanos.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Nuestro contacto</h1>
-    
+    <p>email: yulieth9611@gmail.com</p>
+    <p>number 312 226 7890</p>
 </body>
 </html>
